Fixed 404 page and colour "blink" when in contrast mode
- Fixed 404 page so it applies proper stylesheet and navigation links
- Fixed a transition issue where the tab colours would “blink” from
coloured to contrast theme on page load.

--- a/src/documents/css/docs-inclusive-design-guides.css.styl
+++ b/src/documents/css/docs-inclusive-design-guides.css.styl
@@ -235,7 +235,7 @@ setNavTab(inputColor) {
     }
 
     a {
-        transition: all 0.2s ease;
+        transition: background-color margin-top border-bottom 0.2s ease;
     }
 
     a:hover {
